--- a/video.html
+++ b/video.html
@@ -40,8 +40,8 @@
   <hr class="valighn2"/>
  
   <div class="space"  align="center">
-  <video width="640" height="480" poster="videos/poster.png" controls>
-  <source src="videos/The Beatles - Rain (1966 Emi Records).mp4" type="video/mp4">
+  <video width="640" height="480" poster="/videos/poster.png" controls>
+  <source src="/videos/The Beatles - Rain (1966 Emi Records).mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
   <p>Your browser does not support the video tag.</p>
   </object> 
